--- a/app1.html
+++ b/app1.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
+<div id="header">
+	<a href="#" class="btn-menu"><img src="assets/img/btn-menu.png" alt="show menu" width="42" height="42" /></a>
+	<a href="#" class="btn-add"><img src="assets/img/btn-add.png" alt="add transaction" width="42" height="42" /></a>
+</div>
 <div id="app"></div>
+<div id="menu">
+	<button>+ USAA Checking</button>
+	<button>+ USAA Credit</button>
+</div>
 
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/jquery-ui.custom.min.js"></script>
