event aggregator and startup sequence now work

--- a/app1.html
+++ b/app1.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width"/>
+	<meta charset="utf-8"/>
 	<title>Backbone Expenses</title>
+	<meta name="viewport" content="width=device-width"/>
 	<!-- <link href="assets/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="assets/css/app.css" />
 </head>
@@ -14,7 +14,7 @@
 
 <script src="js/libs/jquery.min.js"></script>
 <!-- <script src="js/libs/jquery-ui.custom.min.js"></script> -->
-<script src="js/libs/lodash.js"></script>
+<script src="js/libs/lodash.min.js"></script>
 <script src="js/libs/backbone-min.js"></script>
 
 <script src="js/app1.js"></script>
