modifying transactionShortView for events

--- a/app1.html
+++ b/app1.html
@@ -13,7 +13,7 @@
 <div id="menu"></div>
 
 <script src="js/libs/jquery.min.js"></script>
-<!-- <script src="js/libs/jquery-ui.custom.min.js"></script> -->
+<script src="js/libs/jquery-ui.custom.min.js"></script>
 <script src="js/libs/lodash.min.js"></script>
 <script src="js/libs/backbone-min.js"></script>
 
@@ -24,9 +24,9 @@
 <script src="js/models/categories.js"></script>
 <script src="js/models/transactions.js"></script>
 <script src="js/views/headerView.js"></script>
-<!-- <script src="js/views/transactionShortView.js"></script>
+<script src="js/views/transactionShortView.js"></script>
 <script src="js/views/transactionListShortView.js"></script>
-<script src="js/views/transactionDetailsView.js"></script> -->
+<script src="js/views/transactionDetailsView.js"></script>
 
 </body>
 </html>
