addMenu accounts working, shortcuts in progress

--- a/app1.html
+++ b/app1.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8"/>
 	<title>Backbone Expenses</title>
 	<meta name="viewport" content="width=device-width"/>
-	<!-- <link href="assets/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet"> -->
+	<link href="assets/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/app.css" />
 </head>
 <body>
@@ -24,6 +24,7 @@
 <script src="js/models/categories.js"></script>
 <script src="js/models/transactions.js"></script>
 <script src="js/views/headerView.js"></script>
+<script src="js/views/addMenu.js"></script>
 <script src="js/views/transactionShortView.js"></script>
 <script src="js/views/transactionListShortView.js"></script>
 <script src="js/views/transactionDetailsView.js"></script>
