working on menu views and interactions

--- a/app1.html
+++ b/app1.html
@@ -24,6 +24,7 @@
 <script src="js/models/categories.js"></script>
 <script src="js/models/transactions.js"></script>
 <script src="js/views/headerView.js"></script>
+<script src="js/views/mainMenu.js"></script>
 <script src="js/views/addMenu.js"></script>
 <script src="js/views/transactionShortView.js"></script>
 <script src="js/views/transactionListShortView.js"></script>
