--- a/app1.html
+++ b/app1.html
@@ -11,6 +11,7 @@
 <div id="header"></div>
 <div id="content"></div>
 <div id="menu"></div>
+<div id="msg"></div>
 
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/jquery-ui.custom.min.js"></script>
