pagination working properly now
but needs html/css optimizations, added jquery.fn.center and cropped
loading.gif -> needs positioning work

--- a/app1.html
+++ b/app1.html
@@ -17,6 +17,14 @@
 <script src="js/libs/jquery-ui.custom.min.js"></script>
 <script src="js/libs/lodash.min.js"></script>
 <script src="js/libs/backbone-min.js"></script>
+<script>
+jQuery.fn.center = function(){
+	this.css("position","absolute");
+	this.css("top", Math.max(0, (($(window).height() - $(this).outerHeight()) / 2) + $(window).scrollTop()) + "px");
+	this.css("left", Math.max(0, (($(window).width() - $(this).outerWidth()) / 2) + $(window).scrollLeft()) + "px");
+	return this;
+};
+</script>
 
 <script src="js/app1.js"></script>
 <script src="js/routers/router.js"></script>
